# tree-sitter-helium

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py
bindings/c/: tree-sitter-helium.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_helium/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterHelium/: helium.h
examples/: helium.hsm
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
