[package]
name = "tree-sitter-helium"
description = "Tree-sitter parser for Helium ASM"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["pml68"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.22.5"

[build-dependencies]
cc = "1.0"
